Simular conexiones a web

--- a/gOfertas/Info.plist
+++ b/gOfertas/Info.plist
@@ -45,5 +45,22 @@
 	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Use Location Service</string>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <false/>
+        <key>NSExceptionDomains</key>
+        <dict>
+            <key>dev-env.z3hhvavp5h.us-west-2.elasticbeanstalk.com</key>
+            <dict>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+                <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSTemporaryExceptionMinimumTLSVersion</key>
+                <string>TLSv1.1</string>
+            </dict>
+        </dict>
+    </dict>
 </dict>
 </plist>
