--- a/gOfertas/Info.plist
+++ b/gOfertas/Info.plist
@@ -51,6 +51,15 @@
         <false/>
         <key>NSExceptionDomains</key>
         <dict>
+            <key>computomovil.us-west-2.elasticbeanstalk.com</key>
+            <dict>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+                <key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+                <true/>
+                <key>NSTemporaryExceptionMinimumTLSVersion</key>
+                <string>TLSv1.1</string>
+            </dict>
             <key>dev-env.z3hhvavp5h.us-west-2.elasticbeanstalk.com</key>
             <dict>
                 <key>NSIncludesSubdomains</key>
